// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cards/> <AutomaticUpdatesCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/package-management/update-settings"
            title="Go to update settings"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Automatic Updates
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Activated
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <AutomaticUpdatesCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/package-management/update-settings"
            title="Go to update settings"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Automatic Updates
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Disabled
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DynamicFirewallCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/package-management/packages"
            title="Go to Dynamic Firewall package installation"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Dynamic Firewall
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Activated
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DynamicFirewallCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/package-management/packages"
            title="Go to Dynamic Firewall package installation"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Dynamic Firewall
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Disabled
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <LibrespeedCard/> Snapshot: contains tests 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <div
          class="d-flex flex-row justify-content-between align-items-center mb-2 "
        >
          <a
            class="text-secondary text-decoration-none"
            href="/librespeed/speed-test"
            title="Go to LibreSpeed"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              LibreSpeed
              <i
                class="fa"
              />
            </h6>
          </a>
          <button
            class="btn btn-link p-0 text-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless table-hover col-12"
          >
            <tbody>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Download
                  <span
                    class="badge text-bg-secondary"
                    title="Megabit per second"
                  >
                    Mb/s
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  930
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Upload
                  <span
                    class="badge text-bg-secondary"
                    title="Megabit per second"
                  >
                    Mb/s
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  930
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Ping
                  <span
                    class="badge text-bg-secondary"
                    title="Millisecond"
                  >
                    ms
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  N/A
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Jitter
                  <span
                    class="badge text-bg-secondary"
                    title="Millisecond"
                  >
                    ms
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  N/A
                </td>
              </tr>
              <tr>
                <th
                  scope="row"
                >
                  Server
                </th>
                <td
                  class="text-end text-truncate"
                  style="max-width: 5.8rem;"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <p
          class="d-flex card-text flex-grow-1"
        >
          <small
            class="text-muted mt-auto"
          >
            Performed
             
            49 years ago
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <LibrespeedCard/> Snapshot: empty 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <div
          class="d-flex flex-row justify-content-between align-items-center mb-2 "
        >
          <a
            class="text-secondary text-decoration-none"
            href="/librespeed/speed-test"
            title="Go to LibreSpeed"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              LibreSpeed
              <i
                class="fa"
              />
            </h6>
          </a>
          <button
            class="btn btn-link p-0 text-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <p
          class="text-muted"
        >
          No tests have been performed lately.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <OpenVPNClientsCard/> Snapshot: contains clients 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <div
          class="d-flex flex-row justify-content-between align-items-center mb-2 "
        >
          <a
            class="text-secondary text-decoration-none"
            href="/openvpn/client-registration"
            title="Go to OpenVPN Client Settings"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              OpenVPN Clients
              <i
                class="fa"
              />
            </h6>
          </a>
          <button
            class="btn btn-link p-0 text-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless table-hover col-12 mb-0"
          >
            <tbody>
              <tr>
                <td
                  class="text-muted"
                >
                  Currently, there are no connected OpenVPN clients.
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <OpenVPNClientsCard/> Snapshot: empty 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <div
          class="d-flex flex-row justify-content-between align-items-center mb-2 "
        >
          <a
            class="text-secondary text-decoration-none"
            href="/openvpn/client-registration"
            title="Go to OpenVPN Client Settings"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              OpenVPN Clients
              <i
                class="fa"
              />
            </h6>
          </a>
          <button
            class="btn btn-link p-0 text-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <p
          class="text-muted"
        >
          There are no OpenVPN clients.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <ThreatDetectionCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/sentinel/agreement"
            title="Go to Sentinel license agreement"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Threat Detection
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Activated
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <ThreatDetectionCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex justify-content-between align-items-center"
      >
        <div
          class="d-flex flex-column"
        >
          <a
            class="text-secondary text-decoration-none"
            href="/package-management/packages"
            title="Go to Sentinel package installation"
          >
            <h6
              class="text-uppercase text-muted mb-0"
            >
              Threat Detection
              <i
                class="fa"
              />
            </h6>
          </a>
          <span
            class="h3 status mb-0 mt-2"
          >
            Disabled
          </span>
        </div>
        <i
          class="fa"
        />
      </div>
    </div>
  </div>
</div>
`;
